--- a/src/masmtest.vcxproj.filters
+++ b/src/masmtest.vcxproj.filters
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <MASM Include="hello_world.asm" />
+    <MASM Include="dirtest.asm" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="hello_world.asm" />
   </ItemGroup>
 </Project>
