Create beginnings of windowtest program

--- a/src/masmtest.vcxproj
+++ b/src/masmtest.vcxproj
@@ -108,7 +108,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EntryPointSymbol>main</EntryPointSymbol>
     </Link>
@@ -123,7 +123,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -132,7 +132,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <MASM Include="dirtest.asm" />
+    <None Include="dirtest.asm">
+      <FileType>Document</FileType>
+    </None>
+    <MASM Include="windowtest.asm">
+      <FileType>Document</FileType>
+    </MASM>
     <None Include="hello_world.asm">
       <FileType>Document</FileType>
     </None>
