--- a/src/masmtest.vcxproj
+++ b/src/masmtest.vcxproj
@@ -108,9 +108,11 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EntryPointSymbol>main</EntryPointSymbol>
+      <ImportLibrary>
+      </ImportLibrary>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -135,12 +137,15 @@
     <None Include="dirtest.asm">
       <FileType>Document</FileType>
     </None>
-    <MASM Include="windowtest.asm">
+    <None Include="windowtest.asm">
       <FileType>Document</FileType>
-    </MASM>
+    </None>
     <None Include="hello_world.asm">
       <FileType>Document</FileType>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <MASM Include="hello_world_2.asm" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
