--- a/src/FileTest/FileTest.vcxproj.filters
+++ b/src/FileTest/FileTest.vcxproj.filters
@@ -1,11 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <None Include="hello_world.asm" />
-    <None Include="dirtest.asm" />
-    <None Include="windowtest.asm" />
+    <None Include="winutil.inc" />
   </ItemGroup>
   <ItemGroup>
-    <MASM Include="hello_world_2.asm" />
+    <MASM Include="filetest.asm" />
   </ItemGroup>
 </Project>
