--- a/src/Learning/Learning.vcxproj.filters
+++ b/src/Learning/Learning.vcxproj.filters
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <MASM Include="hello_world.asm" />
-    <MASM Include="windowtest.asm" />
-    <MASM Include="hello_world_2.asm" />
+    <MASM Include="dirtest.asm" />
   </ItemGroup>
   <ItemGroup>
     <None Include="testlang.lang" />
-    <None Include="dirtest.asm" />
+    <None Include="hello_world.asm" />
+    <None Include="windowtest.asm" />
+    <None Include="hello_world_2.asm" />
   </ItemGroup>
 </Project>
