--- a/src/StringTest/StringTest.vcxproj
+++ b/src/StringTest/StringTest.vcxproj
@@ -109,6 +109,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <EntryPointSymbol>main</EntryPointSymbol>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -133,7 +134,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="docs.md" />
-    <None Include="winutil.inc" />
+    <None Include="winutil.inc">
+      <FileType>Document</FileType>
+    </None>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
